add tweet styles

--- a/src/app/twitter-timeline/twitter-timeline.component.html
+++ b/src/app/twitter-timeline/twitter-timeline.component.html
@@ -3,6 +3,6 @@
 </div>
 
 <a class="twitter-timeline"
-  [href]="getTwitterUrl(twitterHandle)">
+  [href]="getTwitterUrl(twitterHandle)" data-height="600" data-chrome = "noscrollbar">
 Tweets by @{{twitterHandle}}
 </a>
