add flexbox layout for project list

--- a/src/app/project-list/project-list.component.html
+++ b/src/app/project-list/project-list.component.html
@@ -1,7 +1,5 @@
-<p>
-  project-list works!
-</p>
-  <div *ngFor = 'let project of projects | async' (click)="goToProjectDetail(project)">
+<div class="flex-container">
+  <div *ngFor = 'let project of projects | async' (click)="goToProjectDetail(project)" class="flex-object">
     <div class="panel panel-default panel-front">
     	<div class="panel-heading">
     		<h4 class="panel-title"><a HREF="#"><img src="{{project.image}}"></a></h4>
@@ -12,3 +10,4 @@
       </div>
     </div>
   </div>
+</div>
