Move edit button to side-bar, apply owner authentication

--- a/src/app/edit-project/edit-project.component.html
+++ b/src/app/edit-project/edit-project.component.html
@@ -1,7 +1,7 @@
-<button class="btn btn-sm btn-info" (click)="showProjectEditForm = true; getSocialMedia(); getContacts()">Edit</button>
-<div *ngIf='showProjectEditForm' class="edit-project">
+<!-- showProjectEditForm = true; getSocialMedia(); getContacts() -->
+<div class="edit-project">
   <div class="form-group">
-    <label >Title</label>
+    <label>Title</label>
     <input class="form-control" [(ngModel)]="projectToEdit.title" placeholder={{projectToEdit.title}}>
   </div>
   <div class="form-group">
@@ -18,6 +18,6 @@
   </div>
 <app-social-media (addClicked)="setSocialMedia($event)" [projectToEdit] = "projectToEdit" [socialMedia] = "projectSocialMedia"></app-social-media>
 <app-contact [contacts] = "contacts" (addClicked)="setContacts($event)"></app-contact>
-  <button type="button" class="btn btn-success" (click)="showProjectEditForm = false; submitEdit(projectToEdit)">Submit</button>
+  <button type="button" class="btn btn-success" (click)="submitEdit(projectToEdit)">Submit</button>
   <button type="button" name="button" class="btn btn-warning" (click)="reload()">Cancel</button>
 </div>
