--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -23,6 +23,7 @@
   </div>
   <div class="admin" *ngIf="userIsOwner">
     <button type="button" class="btn btn-danger btn-sm" name="button" (click)="deleteProject(projectToDisplay)">Delete</button>
+    <button class="btn btn-sm btn-info" (click)="editClicked()">Edit</button>
   </div>
   <div class="tweetbox">
     <app-twitter-timeline [twitterHandle] ="'jccaylen'"></app-twitter-timeline>
