--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -25,6 +25,6 @@
     <button type="button" class="btn btn-danger btn-sm" name="button" (click)="deleteProject(projectToDisplay)">Delete</button>
   </div>
   <div class="tweetbox">
-    <app-twitter-timeline [twitterHandle] ="getTwitterHandle(project.socialMedia)"></app-twitter-timeline>
+    <app-twitter-timeline [socialMedia] ="project.socialMedia"></app-twitter-timeline>
   </div>
 </div>
