--- a/src/app/twitter-timeline/twitter-timeline.component.html
+++ b/src/app/twitter-timeline/twitter-timeline.component.html
@@ -1,8 +1,8 @@
 <div id="twitter-timeline">
   {{twitterHandle}}
+  Tweets by @{{twitterHandle}}
 </div>
 
-<a class="twitter-timeline"
+<!-- <a class="twitter-timeline"
   [href]="getTwitterUrl(twitterHandle)" data-height="600" data-chrome = "noscrollbar">
-Tweets by @{{twitterHandle}}
-</a>
+</a> -->
