Create add need button, only show if clicked

--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -2,15 +2,15 @@
   <div class="main-project col-md-8">
     <h2>{{projectToDisplay?.title}}</h2>
     <app-edit-project *ngIf="startEditing" [projectToEdit]='projectToDisplay' [projectId]='projectId' (closeModalSender)='startEditing = false'></app-edit-project>
+    <app-add-need  *ngIf="showAddNeed" [selectedProjectKey]="projectId"></app-add-need>
 
     <img *ngIf="projectToDisplay" [src]="projectToDisplay?.image" alt="projectToDisplay?.title" />
     <p [innerHTML]="projectToDisplay?.description"></p>
+    <div class="needs-list">
+      <app-need *ngFor="let needId of projectToDisplay.needs | keys" [selectedProjectKey]="projectId" [needId]="needId" [userIsOwner]="userIsOwner"></app-need>
+    </div>
   </div>
   <div class="col-md-4">
-    <app-side-bar [project]="projectToDisplay" [owner]="user" [userIsOwner]="userIsOwner" (editClickSender)="editClickSender()"></app-side-bar>
+    <app-side-bar [project]="projectToDisplay" [owner]="user" [userIsOwner]="userIsOwner" (editClickSender)="editClickSender()" (needClickSender)="needClickSender()"></app-side-bar>
   </div>
-</div>
-<app-add-need [selectedProjectKey]="projectId"></app-add-need>
-<div class="needs-list">
-  <app-need *ngFor="let needId of projectToDisplay.needs | keys" [selectedProjectKey]="projectId" [needId]="needId" [userIsOwner]="userIsOwner"></app-need>
 </div>
