--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,8 +24,19 @@
   </div>
 </div>
 
-<footer class="footer">
-  <!-- <div class="container">
-    <a class="text-muted" routerLink="admin">Admin</a>
-  </div> -->
-</footer>
+<div class="footer-bottom">
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+				<div class="copyright">
+					© 2017, StartPup Ltd., All rights reserved
+				</div>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+	       <div class="design">
+					 <a routerLink="contact">Contact Us!</a> |  <a target="_blank" href="http://www.startpup.com">Web Design & Development by Webenlance</a>
+				</div>
+			</div>
+    </div>
+  </div>
+</div>
