--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,3 +8,29 @@
   box-shadow: 0px 5px 10px #888888;
   padding:20px;
 }
+
+/************ Footer ***********/
+
+.footer-bottom {
+    background-color: #15224f;
+    min-height: 30px;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+}
+.copyright {
+    color: #fff;
+    line-height: 30px;
+    min-height: 30px;
+    padding: 7px 0;
+}
+.design {
+    color: #fff;
+    line-height: 30px;
+    min-height: 30px;
+    padding: 7px 0;
+    text-align: right;
+}
+.design a {
+    color: #fff;
+}
