--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,8 @@
+.navbar {
+  margin-bottom: 0;
+  border: none;
+}
+
 #signup {
   z-index: 5;
   position: fixed;
@@ -9,13 +14,21 @@
   padding:20px;
 }
 
+div.container-fluid {
+  background-color: rgba(119, 70, 153, .85);
+  a {
+    color: white
+    }
+}
+
+
 /************ Footer ***********/
 
 .footer-bottom {
-    background-color: #15224f;
+    background-color: #774699;
     min-height: 30px;
     width: 100%;
-    position: absolute;
+    position: fixed;
     bottom: 0;
 }
 .copyright {
