--- a/src/app/project-list/project-list.component.html
+++ b/src/app/project-list/project-list.component.html
@@ -1,13 +1,16 @@
-<div class="flex-container">
-  <div *ngFor = 'let project of projects | async' (click)="goToProjectDetail(project)" class="flex-object">
-    <div class="panel panel-default panel-front">
-    	<div class="panel-heading">
-    		<h4 class="panel-title"><a HREF="#"><img src="{{project.image}}"></a></h4>
-      </div>
-      <div class="panel-body">
-        <h4>{{project.title}}</h4>
-          <div class="" [innerHTML]="truncateDescription(project.description)"></div>
+<div class="container">
+  <div class="flex-container">
+    <div *ngFor = 'let project of projects | async' (click)="goToProjectDetail(project)" class="flex-object">
+      <div class="panel panel-default panel-front">
+      	<div class="panel-heading">
+      		<h4 class="panel-title"><a HREF="#"><img src="{{project.image}}"></a></h4>
+        </div>
+        <div class="panel-body">
+          <h4>{{project.title}}</h4>
+            <div class="" [innerHTML]="truncateDescription(project.description)"></div>
+        </div>
       </div>
     </div>
   </div>
+  <div class="row" class="space"></div>
 </div>
