--- a/src/app/project-list/project-list.component.scss
+++ b/src/app/project-list/project-list.component.scss
@@ -2,20 +2,29 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
+  align-items: center;
+  margin-top: 30px;
 }
 
 .flex-object {
   min-width: 200px;
-  width: 25%;
+  width: 31%;
   margin-top: 15px;
   display: inline-block;
-  margin-left: 1%;
   img {
     width: 100%;
   }
-  margin: 2.5%;
+  margin: 1%;
 }
 
 .panel-body {
   min-height: 250px;
+}
+
+.panel-heading {
+  padding: 0;
+}
+
+.space {
+  height: 50px;
 }
