--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     </div>
     <ul class="nav navbar-nav navbar-right">
       <li *ngIf="!isLoggedIn"><a (click)= "showSignup=true">Signup</a></li>
-      <li><a routerLink="new-project">New Project</a></li>
+      <li *ngIf="isLoggedIn"><a routerLink="new-project">New Project</a></li>
       <li><a routerLink="about">About</a></li>
       <li *ngIf="showName()"><a (click)="navigateToProfile()"> Welcome, {{currentUser.displayName}}</a></li>
       <li *ngIf="!isLoggedIn"><a (click)="showLogin = true">Login</a></li>
