--- a/src/app/edit-project/edit-project.component.html
+++ b/src/app/edit-project/edit-project.component.html
@@ -1,4 +1,4 @@
-<button class="btn btn-sm btn-info" (click)="showProjectEditForm = true; getSocialMedia(); getContacts()">Edit</button>
+<button class="btn btn-sm btn-info" (click)="showProjectEditForm = true; getSocialMedia(); getContacts();this.router.navigate(['projects/edit', this.projectId]);">Edit</button>
 <div *ngIf='showProjectEditForm' class="edit-project">
   <div class="form-group">
     <label >Title</label>
