--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,5 @@
+/************ Nav Bar ***********/
+
 .navbar {
   margin-bottom: 0;
   border: none;
@@ -13,6 +15,22 @@
   box-shadow: 0px 5px 10px #888888;
   padding:20px;
 }
+
+/************ Header ***********/
+.business-header {
+    height: 450px;
+    background: url('https://static.pexels.com/photos/29781/pexels-photo-29781.jpg') center center no-repeat scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+    color: white;
+}
+
+.space {
+  height: 200px;
+}
+
 
 div.container-fluid {
   background-color: rgba(119, 70, 153, .85);
@@ -49,5 +67,4 @@ div.container-fluid {
   .container {
     margin-bottom: 20px;
   }
-}
 }
