--- a/src/app/edit-project/edit-project.component.html
+++ b/src/app/edit-project/edit-project.component.html
@@ -1,5 +1,5 @@
-<button class="btn btn-sm btn-info" (click)="showProjectEditForm = true; getSocialMedia(); getContacts();this.router.navigate(['projects/edit', this.projectId]);">Edit</button>
-<div *ngIf='showProjectEditForm' class="edit-project">
+<!-- <button class="btn btn-sm btn-info" (click)="showProjectEditForm = true; getSocialMedia(); getContacts();this.router.navigate(['projects/edit', this.projectId]);">Edit</button> -->
+<div class="edit-project">
 <!-- showProjectEditForm = true; getSocialMedia(); getContacts() -->
   <div class="form-group">
     <label>Title</label>
