Make the about link go to the about page

--- a/src/app/new-project/new-project.component.html
+++ b/src/app/new-project/new-project.component.html
@@ -14,3 +14,4 @@
 <app-social-media (addClicked)="setSocialMedia($event)" [socialMedia]="socialMedia"></app-social-media>
 <app-contact (addClicked)="setContact($event)" [contacts]="contacts"></app-contact>
 <button class="btn btn-info" (click)="createNewProject(newTitle.value, newImage.value, newDescription, newWebsite.value); newTitle.value=''; newImage.value='';newDescription='';newWebsite.value='';">Propose</button>
+<div class="space"></div>
