--- a/src/app/project-list/project-list.component.html
+++ b/src/app/project-list/project-list.component.html
@@ -7,7 +7,7 @@
         </div>
         <div class="panel-body">
           <h4>{{project.title}}</h4>
-            <div class="" [innerHTML]="truncateDescription(project.description)"></div>
+            <div class="textbody" [innerHTML]="truncateDescription(project.description)"></div>
         </div>
       </div>
     </div>
