--- a/src/app/need/need.component.scss
+++ b/src/app/need/need.component.scss
@@ -1,5 +1,12 @@
-.need-box {
-  box-shadow: 2px 2px 1px 2px teal;
-  margin-top: 11px;
-  padding: 10px;
+h4 {
+  font-size: 20px;
+}
+
+.panel-default > .panel-heading {
+  background-color: #774699;
+}
+
+.panel-title {
+  color: white;
+  font-family: 'Open Sans Condensed', sans-serif;
 }
