add styles to about page

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,19 +1,32 @@
+<div class="container">
 
-<h2>About Us</h2>
-<h3>Our mission</h3>
-<p>
-   Our mission is to help bring people together and share their creative ideas and assist them in bringing their dreams to life.
-</p>
+<h3>About Us</h3>
+<div class="space-sm"></div>
+<h1><em>Our mission</em></h1>
+<div class="space"></div>
+<div class="row mission-state">
+  <p>
+    Our mission is to help bring people together and share their creative ideas and assist them in bringing their dreams to life.
+  </p>
+</div>
 
-<h3> StartPup is just for creative projects.</h3>
+<div class="creat-proj">
+
+<h2><em>StartPup is just for creative projects.</em></h2>
+<div class="space-sm"></div>
 <ul>
-  <li>We provide platform that’s fully dedicated to building community around creative projects.</li>
-  <li>We help you get enough funds to realize your project.</li>
-  <li>We also allow our users to connect with your community through social media networking.</li>
+  <li><h4>We provide platform that’s fully dedicated to building community around creative projects.</h4></li>
+  <li><h4>We help you get enough funds to realize your project.</h4></li>
+  <li><h4>We also allow our users to connect with your community through social media networking.</h4></li>
 </ul>
+</div>
 
-<br>
-<br>
+<div class="space"></div>
+
 <blockquote>
   "Creativity is Contagious. PASS IT ON."
 </blockquote>
+
+<div class="space"></div>
+
+</div>
