--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,7 +54,7 @@
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
 	       <div class="design">
-					 <a routerLink="contact">Contact Us!</a> |  <a target="_blank" routerLink="about">About StartPup</a>
+					 <a routerLink="contact">Contact Us!</a> |  <a routerLink="about">About StartPup</a>
 				</div>
 			</div>
     </div>
