--- a/src/app/project-list/project-list.component.scss
+++ b/src/app/project-list/project-list.component.scss
@@ -22,10 +22,11 @@
 }
 
 .panel-body {
-  max-height: 400px;
+  height: 180px;
 }
 
 .panel-heading{
+  height:180px;
   padding: 0;
   overflow: hidden;
 }
